# agentic-platform

./: Dockerfile  GETTING_STARTED.md  LEARNING_PATH.md  Makefile  PERFORMANCE_QUICKSTART.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_embeddings.py  test_openai_embeddings.py
alembic/: env.py
alembic/versions/: 20250115_0000_add_performance_indexes.py  20251012_2205_6266ca9c8ac3_initial_schema.py  20251019_0426_583707ecf3d3_add_rag_tables_and_pgvector_extension.py  20251121_2325_71c3dad7290a_add_mcp_models_mcp_servers_mcp_server_.py  20251121_2349_ecc4af4f162e_add_workflow_and_multi_agent_.py
docs/: ARCHITECTURE_DECISIONS.md  CHEAT_SHEET.md  CODEBASE_DEEP_DIVE.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_PROGRESS.md  MCP_USAGE_GUIDE.md  OBSERVABILITY.md  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  RUNBOOK.md  SENTRY.md  SESSION_SUMMARY_2025-11-21.md  TESTING_GUIDE.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_USAGE_GUIDE.md  api-specification.md  architecture.md  database-schema.md  deployment.md  mcp-implementation.md  rag-implementation.md
docs/pdf/: .gitignore
load_tests/: README.md  locustfile.py
nginx/: nginx.conf
observability/: README.md
observability/alertmanager/: alertmanager.yml
observability/prometheus/: alerts.yml  prometheus.yml
scripts/: README.md  __init__.py  generate_docs_pdf.sh  init-db.sql  seed_dev_data.py  seed_mcp_servers.py  seed_workflow_templates.py
scripts/backup/: Dockerfile  README.md  backup.sh  entrypoint.sh
src/: __init__.py  main.py
src/api/: dependencies.py
src/core/: batch.py  cache.py  config.py  logging.py  metrics.py  middleware.py  rate_limit.py  secrets.py  security.py  security_headers.py  sentry_config.py  tracing.py
src/db/: base.py  models.py  session.py
src/mcp_servers/: __init__.py  base_server.py  calculator_server.py  database_server.py  filesystem_server.py
src/schemas/: agent.py  auth.py  mcp.py  (+3 more)
tests/: __init__.py  conftest.py  test_api_integration.py  test_auth.py  test_mcp_servers.py  test_rag.py  test_workflow_engine.py
(+16 files in other folders)
